右四屏框架和tab4重新排版

--- a/src/main/webapp/WEB-INF/pages/layout/centerLab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/centerLab.html
@@ -830,7 +830,7 @@
             $(this).css("color","#64ccff").find(".icon").css("background-image","url(${contextPath!}/static/img/labMain/labMain_toTotalStatus.png)")
         }).click(function () {
             $(".labMain_content").hide();
-            $("#right").show();
+            $("#r").show();
             var $li = $("#l").find(".flat-footer .legend ul.legend-bottom li");
             $li.removeClass("active").each(function () {
                 bgImgOff($(this))
