--- a/src/main/webapp/WEB-INF/pages/layout/tab/tab1.html
+++ b/src/main/webapp/WEB-INF/pages/layout/tab/tab1.html
@@ -167,14 +167,14 @@
     </div>
     <div class="total_bottom">
         <div class="total_name">数据应用</div>
-        <div class="total_bottom_left tab1">
+        <div class="shujuWajue_left tab1">
             <div class="echarts_title echarts_title2">模块商过程能力分析</div>
             <div class="total_bottom_pie">
                 <h3>模块商质量水平分布</h3>
                 <div class="rename-ppm">ppm</div>
                 <div id="myChart8"></div>
             </div>
-            <div class="total_bottom_tab">
+            <div class="shujuWajue_left_top_list">
 <!--
             	<ul>
             		##for(p in providerDic){
@@ -251,7 +251,7 @@
                 </form>
             </div>
 
-            <div class="total_bottom_bar1">
+            <div class="shujuWajue_left_bottom_spc">
                 <!--<div class="echarts_title echarts_title1">量产一致性对比分析</div>-->
                 <h3><span class="white" id="tab1_jiance_xh_name"></span> SPC分析</h3>
                 <p class="result" id="tab1_jiance_xh_result"></p>
@@ -259,19 +259,19 @@
                 <div id="myChart9_2"></div>
 
             </div>
-            <div class="total_bottom_bar2">
+            <div class="shujuWajue_left_bottom_cpk">
                 <h3><span class="white" id="tab1_jiance_xh_name2"></span> CpK分析</h3>
                 <p class="result" id="tab1_jiance_xh_result2"></p>
                 <div id="myChart10"></div>
             </div>
 
         </div>
-        <div class="total_bottom_right">
+        <div class="shujuWajue_right">
             <div class="echarts_title echarts_title2">共产一致性保障</div>
             <div class="total_bottom_pie">
                 <div id="myChart11"></div>
             </div>
-            <div class="total_bottom_bar1">
+            <div class="shujuWajue_left_bottom_spc">
 
                 <div id="myChart12"></div>
             </div>
