--- a/src/main/webapp/static/css/common.css
+++ b/src/main/webapp/static/css/common.css
@@ -101,7 +101,7 @@ h3 {
   flex: 3;
   /*background-color: rgba(205, 92, 92, 0.29);*/
 }
-#right{
+#r{
   flex: 4;
   /*background-color: rgba(135, 206, 235, 0.28);*/
 }
