--- a/src/main/webapp/WEB-INF/pages/layout/fullScreen_map.html
+++ b/src/main/webapp/WEB-INF/pages/layout/fullScreen_map.html
@@ -176,7 +176,7 @@
 </div>
 <script>
     $(".btnGroup>.quit>img").click(function () {
-        $(".left3x3,#right").show();
+        $(".left3x3,#r").show();
         $(".fullScreen_map").animate({
             left: -(pageW + 100)
         },2000,function () {
