--- a/src/main/webapp/WEB-INF/pages/layout/tab/tab4.html
+++ b/src/main/webapp/WEB-INF/pages/layout/tab/tab4.html
@@ -1,76 +1,61 @@
-<div class="box shuju_apply tab4">
-    <div class="shuju_apply_top">
-        <!--14-19-->
-        <div class="total_bottom_left">
-            <div class="echarts_title echarts_title2">量产一致性保障</div>
-            <div class="shuju_apply_bottom_pie">
+
+<head>
+    <link rel="stylesheet" href="${contextPath!}/static/css/tab4.css">
+</head>
+
+<div class="box shujuWajue tab4">
+        <div class="shujuWajue_left">
+            <span class="title">模块商过程能力分析</span>
+            <!--<div class="echarts_title echarts_title2">量产一致性保障</div>-->
+            <div class="shujuWajue_left_top">
                 <h3>模块商质量水平分布</h3>
                 <div class="rename-ppm">ppm</div>
                 <div id="myChart14"></div>
-            </div>
-            <div class="total_bottom_tab">
-                <form action="">
-                    <select name="请选择" onchange="tab1JianSelected(this)">
-                        ##for(p in providerDic){
-                        <optgroup class="main main${p.id!}" label=${p.name!}>
-                            ##for(c in p.children){
-                            ##if(pLP.first&&cLP.first){
-                            <option class="main${p.id}-sub active" data="${c.id}">${c.name}</option>
-                            ##}else{
-                            <option class="main${p.id}-sub" data="${c.id}">${c.name}</option>
+                <div class="shujuWajue_left_top_list">
+                    <form action="">
+                        <select name="请选择" onchange="tab4JianSelected(this)">
+                            <option class="showLabel" style="display: none">常州福兰德电器</option>
+                            ##for(p in providerDic){
+                            <optgroup class="main main${p.id!}" label=${p.name!}>
+                                ##for(c in p.children){
+                                ##if(pLP.first&&cLP.first){
+                                <option class="main${p.id}-sub active" data="${c.id}" value="${c.name}">${c.name}</option>
+                                ##}else{
+                                <option class="main${p.id}-sub" data="${c.id}" value="${c.name}">${c.name}</option>
+                                ##}
+                                ##}
+                            </optgroup>
                             ##}
-                            ##}
-                        </optgroup>
-                        ##}
-                    </select>
-                </form>
+                        </select>
+                    </form>
 
+                </div>
             </div>
-             <div class="total_bottom_bar1">
-                <!--<div class="echarts_title echarts_title1">量产一致性对比分析</div>-->
-                <h3><span class="white" id="tab4_jiance_xh_name"></span> SPC分析</h3>
-                <p class="result" id="tab4_jiance_xh_result"></p>
-                <div id="myChart15"></div>
-                <div id="myChart15_2"></div>
-
+            <div class="shujuWajue_left_bottom">
+                <div class="shujuWajue_left_bottom_spc">
+                    <!--<div class="echarts_title echarts_title1">量产一致性对比分析</div>-->
+                    <h3><span class="white" id="tab4_jiance_xh_name"></span> SPC分析</h3>
+                    <p class="result" id="tab4_jiance_xh_result"></p>
+                    <div id="myChart15"></div>
+                    <div id="myChart15_2"></div>
+                </div>
+                <div class="shujuWajue_left_bottom_cpk">
+                    <h3><span class="white" id="tab4_jiance_xh_name2"></span> CpK分析</h3>
+                    <p class="result" id="tab4_jiance_xh_result2"></p>
+                    <div id="myChart16"></div>
+                </div>
             </div>
-            <div class="total_bottom_bar2">
-                <h3><span class="white" id="tab4_jiance_xh_name2"></span> CpK分析</h3>
-                <p class="result" id="tab4_jiance_xh_result2"></p>
-                <div id="myChart16"></div>
-<!--
-                <div>111</div>
-                <div>111</div>
-                <div>111</div>
-                <div>111</div>
-                <div>111</div>
-                <div>111</div>
-                <div>111</div>
-                <div>111</div>
--->
-            </div>
-
         </div>
-        <div class="shuju_apply_bottom_right">
-            <div class="echarts_title echarts_title2">共产一致性保障</div>
-            <div class="shuju_apply_bottom_pie">
+        <div class="shujuWajue_right">
+            <span class="title">共产一致性保障</span>
+            <!--<div class="echarts_title echarts_title2">共产一致性保障</div>-->
+            <div class="shujuWajue_right_top">
                 <div id="myChart17"></div>
             </div>
-            <div class="shuju_apply_bottom_bar1">
-
+            <div class="shujuWajue_right_bottom">
                 <div id="myChart18"></div>
             </div>
-            <!--<div class="total_bottom_bar2">-->
-            <!--<div class="echarts_title echarts_title1">共产不一致型号数</div>-->
-            <!--<div id="myChart13"></div>-->
-            <!--</div>-->
         </div>
-    </div>
-    <div class="shuju_apply_center"></div>
-    <div class="shuju_apply_bottom"></div>
 </div>
 
 
-<script>
-
-</script>
