运营状态修改

--- a/src/main/webapp/WEB-INF/pages/layout/tab/tab3.html
+++ b/src/main/webapp/WEB-INF/pages/layout/tab/tab3.html
@@ -1,163 +1,10 @@
-<div class="box shuju_result">
-    <div class="shuju_result_top">
-        <div class="shuju_result_top_left">
-            <div class="shuju_title">订单类别</div>
-            <ul>
-                <li class="order_left">
-                    <div class="order_all">
-                        <ul>
-                            <li>整机订单总数</li>
-                            <li class="sheshi_num" id="tab3_zj_order_type"></li>
-                        </ul>
-                        <ul>
-                            <div id="myChart39"></div>
-                        </ul>
-                    </div>
-                </li>
-                <li class="order_left">
-                    <div class="order_all">
-                        <ul>
-                            <li>模块订单总数</li>
-                            <li class="sheshi_num" id="tab3_mk_order_type"></li>
-                        </ul>
-                        <ul>
-                            <div id="myChart40"></div>
-                        </ul>
-                    </div>
-                </li>
-            </ul>
-        </div>
-        <div class="shuju_result_top_center">
-            <div class="shuju_title">一次合格率</div>
-            <ul>
-                <li class="order_left">
-                    <div class="order_all">
-                        <ul>
-                            <li>整机</li>
-                            <li class="sheshi_num" id="once_pass_rate_zj"></li>
-                        </ul>
-                        <ul>
-                            <div id="myChart41"></div>
-                        </ul>
-                    </div>
-                </li>
-                <li class="order_left">
-                    <div class="order_all">
-                        <ul>
-                            <li>模块</li>
-                            <li class="sheshi_num" id="once_pass_rate_mk"></li>
-                        </ul>
-                        <ul>
-                            <div id="myChart42"></div>
-                        </ul>
-                    </div>
-                </li>
-            </ul>
-        </div>
-        <div class="shuju_result_top_right">
-            <div class="shuju_title">问题闭环率</div>
-            <ul>
-                <li class="order_left">
-                    <div class="order_all">
-                        <ul>
-                            <li>整机</li>
-                            <li class="sheshi_num" id="tab3_question_closed_zj"></li>
-                        </ul>
-                        <ul>
-                            <div id="myChart43"></div>
-                            <!--<div class="labLine"></div>-->
-                        </ul>
-                    </div>
-                </li>
-                <li class="order_left">
-                    <div class="order_all">
-                        <ul>
-                            <li>模块</li>
-                            <li class="sheshi_num" id="tab3_question_closed_mk"></li>
-                        </ul>
-                        <ul>
-                            <div id="myChart44"></div>
-                            <!--<div class="labLine"></div>-->
-                        </ul>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </div>
-    <div class="shuju_result_bottom">
-        <div class="shuju_result_bottom_left">
-            <div class="shuju_title1">订单及时率</div>
-            <ul>
-                <li class="order_left">
-                    <div class="order_all">
-                        <div class="order_all_name">
-                            <ul>
-                                <li>2016年及时率</li>
-                                <li class="sheshi_num" id="order_year_rate_2016"></li>
-                            </ul>
-                            <ul>
-                                <li>2017年及时率</li>
-                                <li class="sheshi_num"  id="order_year_rate_2017"></li>
-                            </ul>
-                        </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
 
-                        <div id="myChart45"></div>
-
-                    </div>
-                </li>
-                <li class="order_left">
-                    <div class="order_all">
-                        <!--<ul class="order_all_name">-->
-                        <!--<li>2017年及时率</li>-->
-                        <!--<li class="sheshi_num" ><span id="order_year_rate_2017">96% </span><span><img src="${contextPath!}/static/img/sheshiState/rise.png"-->
-                        <!--alt=""></span><span-->
-                        <!--class="up_num" id="order_year_rate_up_2017">0.05%</span></li>-->
-                        <!--</ul>-->
-                        <!--<ul>-->
-                        <div class="myChart46_name">订单及时率趋势变化</div>
-                        <div id="myChart46"></div>
-                        <!--</ul>-->
-                    </div>
-                </li>
-            </ul>
-        </div>
-        <div class="shuju_result_bottom_right">
-            <div class="shuju_title1">用户满意度</div>
-            <div class="jiance_left">
-                <ul>
-                    <li class="order_left">
-                        <div class="order_all">
-                            <ul>
-                                <li>2016年满意度</li>
-                                <li class="sheshi_num" id="tab3_user_my_hb"></li>
-                            </ul>
-                            <ul>
-                                <div id="myChart47"></div>
-                            </ul>
-                        </div>
-                    </li>
-                    <li class="order_left">
-                        <div class="order_all">
-                            <ul>
-                                <li>2017年满意度</li>
-                                <li class="sheshi_num" id="tab3_user_my_tq"></li>
-                            </ul>
-                            <ul>
-                                <div id="myChart48"></div>
-                            </ul>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-            <div class="jiance_right">
-                <div class="jiance_right_name">用户满意度趋势变化</div>
-                <div id="myChart49"></div>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-<script>
-
-</script>
+</body>
+</html>
