基本完成tab2,3的布局样式

--- a/src/main/webapp/WEB-INF/pages/layout/right.html
+++ b/src/main/webapp/WEB-INF/pages/layout/right.html
@@ -46,9 +46,9 @@
 ##}
 <script src="${contextPath!}/static/asserts/js/highcharts.js"></script>
 <script src="${contextPath!}/static/js/main_right.js?time=New Date()"></script>
-<!-- <script src="${contextPath!}/static/js/tab1_statistics.js?time=New Date()"></script> -->
+ <!--<script src="${contextPath!}/static/js/tab1_statistics.js?time=New Date()"></script>-->
 <script src="${contextPath!}/static/js/tab2_statistics.js?time=New Date()"></script>
-<!--<script src="${contextPath!}/static/js/tab3_statistics.js?time=New Date()"></script>-->
+<script src="${contextPath!}/static/js/tab3_statistics.js?time=New Date()"></script>
 <script src="${contextPath!}/static/js/tab4_statistics.js?time=New Date()"></script>
 <script>
     var labTypeCode;//实验室类型
@@ -63,6 +63,7 @@
             resetSizeRight();
         });
 
+//        loadTab1Data();
         loadTab2Data();
         loadTab3Data();
         loadTab4Data();
