--- a/src/main/webapp/WEB-INF/pages/layout/tab/tab3.html
+++ b/src/main/webapp/WEB-INF/pages/layout/tab/tab3.html
@@ -30,26 +30,90 @@
                     <span class="active">整机</span>
                     <span class="">模块</span>
                 </div>
-                <div id="myChart1"></div>
+                <div id="myChart39"></div>
             </div>
         </div>
         <div class="t3_l_2">
             <span class="title">一次合格率</span>
             <div class="divideLine"></div>
+            <div class="t3_l_2_top">
+                <p class="explain">
+                    当年一次合格率 <strong class="orange">96%</strong>
+                    <br>同比上升 <strong class="orange">3%</strong>
+                </p>
+                <div id="myChart43"></div>
+            </div>
+            <div class="t3_l_2_bottom">
+                <h3>各产品一次合格率</h3>
+                <div class="btnGroup">
+                    <span class="active">整机</span>
+                    <span class="">模块</span>
+                </div>
+                <div id="myChart41"></div>
+            </div>
         </div>
         <div class="t3_l_3">
             <span class="title">问题闭环率</span>
             <div class="divideLine"></div>
+            <div class="t3_l_3_top">
+                <p class="explain">
+                    当年问题闭环率 <strong class="orange">96%</strong>
+                    <br>同比上升 <strong class="orange">3%</strong>
+                </p>
+                <div id="myChart44"></div>
+            </div>
+            <div class="t3_l_3_bottom">
+                <h3>各产品问题闭环率</h3>
+                <div class="btnGroup">
+                    <span class="active">整机</span>
+                    <span class="">模块</span>
+                </div>
+                <div id="myChart42"></div>
+            </div>
         </div>
     </div>
     <div id="t3_r">
         <div class="t3_r_1">
             <span class="title">订单及时率</span>
             <div class="divideLine"></div>
+            <div class="t3_r_1_top">
+                <p class="explain">
+                    当年订单及时率 <strong class="orange">96%</strong> ,
+                    同比上升 <strong class="orange">3%</strong>
+                </p>
+                <div id="myChart6"></div>
+            </div>
+            <div class="t3_r_1_bottom">
+                <div class="t3_r_1_bottom_l">
+                    <h3>订单及时率同比变化</h3>
+                    <div id="myChart45"></div>
+                </div>
+                <div class="t3_r_1_bottom_r">
+                    <h3>订单及时率趋势变化</h3>
+                    <div id="myChart46"></div>
+                </div>
+            </div>
         </div>
         <div class="t3_r_2">
             <span class="title">用户满意度</span>
             <div class="divideLine"></div>
+            <div class="t3_r_2_top">
+                <p class="explain">
+                    当年用户满意度 <strong class="orange">96%</strong> ,
+                    同比上升 <strong class="orange">3%</strong>
+                </p>
+                <div id="myChart7"></div>
+            </div>
+            <div class="t3_r_2_bottom">
+                <div class="t3_r_2_bottom_l">
+                    <h3>用户满意度同比变化</h3>
+                    <div id="myChart47"></div>
+                </div>
+                <div class="t3_r_2_bottom_r">
+                    <h3>用户满意度趋势变化</h3>
+                    <div id="myChart49"></div>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -214,11 +278,17 @@
 
 <script>
 $(function () {
+    //右上角切换页面的按钮
     $(".pageSwitch:nth-of-type(1)>span.page_next").click(function () {
-        $(this).parents(".box").css("left","-99%")
-    })
+        $(this).parents(".box").css("left","-100%")
+    });
     $(".pageSwitch:nth-of-type(2)>span.page_pre").click(function () {
         $(this).parents(".box").css("left",0)
+    })
+
+    //整机和模块的切换
+    $("#tab3").find(".btnGroup > span").click(function () {
+        $(this).addClass("active").siblings().removeClass("active")
     })
 })
 </script>
