--- a/src/main/webapp/WEB-INF/pages/layout/tab/tab3.html
+++ b/src/main/webapp/WEB-INF/pages/layout/tab/tab3.html
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" href="${contextPath!}/static/css/tab3.css">
+    <link rel="stylesheet" href="${contextPath!}/static/css/tabs/tab3.css">
 </head>
 <div id="tab3" class="box shuju_result">
     <div class="pageSwitch">
