--- a/src/main/webapp/WEB-INF/pages/layout/tab/tab4.html
+++ b/src/main/webapp/WEB-INF/pages/layout/tab/tab4.html
@@ -1,6 +1,5 @@
-
 <head>
-    <link rel="stylesheet" href="${contextPath!}/static/css/tab4.css">
+    <link rel="stylesheet" href="${contextPath!}/static/css/tabs/tab4.css">
 </head>
 
 <div class="box shujuWajue tab4">
