--- a/src/main/webapp/static/css/tabs/tab2.css
+++ b/src/main/webapp/static/css/tabs/tab2.css
@@ -51,15 +51,15 @@
 
 #tab2  .yunying {
     /*width: 100%;*/
-    height: 94%;
+    height: 95%;
     /*background-color: pink;*/
-    margin: 1.5% 0 0 0.5%;
+    margin: 1.68% 0 0 0.5%;
 }
 
 #tab2  .content_box {
     background: url("../../img/tab2/content-border.png") no-repeat;
     background-size: 100% 100%;
-    width: 49%;
+    width: 48%;
     height: 100%;
     /*background-color: #00a9b4;*/
     float: left;
@@ -68,6 +68,9 @@
 #tab2  .content_box:first-of-type{
     margin-right: 1%;
 }
+ #tab2 #tab2_left .yunying_right{
+     margin-left: 1.8%;
+ }
 #tab2  .yunying_left_top {
     width: 98%;
     height: 38%;
