--- a/src/main/webapp/static/css/tabs/tab4.css
+++ b/src/main/webapp/static/css/tabs/tab4.css
@@ -1,10 +1,7 @@
 .shujuWajue{
     display: flex;
-    height: 90%;
-    padding: 0.2% 1% .6% 0;
-    margin-top: 0.5%;
-    margin-left: 0.1%;
-    width: 100%;
+    height: 92%;
+    padding: 0.7% .6% .9% 0;
 }
 .shujuWajue>div{
     position: relative;
@@ -13,16 +10,13 @@
     flex: 1;
     height: 98%;
     background-image: url("../../img/tab4/bigBorder_wajue.png");
-    background-repeat: no-repeat;
-    background-size: 99.5% 100%;
-    margin: 1%;
-    margin-left: 1.36%;
-    /*padding:2%;*/
+    background-size: 100% 100%;
+    margin: 1% 1.4% 0;
+    padding: 2% 1%;
 }
 .shujuWajue>div>div{
     /*outline: 1px dashed yellowgreen;*/
     flex:1;
-    /*height:90%;*/
 }
 .shujuWajue>div>.title{
     position: absolute;
@@ -34,13 +28,13 @@
 }
 .shujuWajue>div>div h3{
     text-align: center;
-    margin-top: .5em;
+    margin-top: 2%;
     font-size: 1.3em;
 }
 
 .shujuWajue_left>.shujuWajue_left_top {
     font-size: 1.1em;
-    flex:1.5;
+    flex:.7;
 }
 .shujuWajue_left_top h3{
     color: #fff;
@@ -70,7 +64,7 @@
 }
 .shujuWajue_left_bottom_cpk{
     width: 32%;
-    margin-left: 6%;
+    /*margin-left: 6%;*/
 }
 .shujuWajue_left_bottom p.result{
     color: #00e673;
@@ -81,12 +75,15 @@
 }
 #myChart14,
 #myChart16{
-    height: 75%;
+    height: 82%;
 }
 #myChart15,
 #myChart15_2{
     height:46%;
 }
+
+
+
 
 
 .shujuWajue_right_top{
